--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.51.0",
+    "typescript": "^5",
     "@clerk/nextjs": "^6.19.2",
     "@geist-ui/react": "^2.2.5",
     "@prisma/client": "^6.8.2",
@@ -37,12 +38,12 @@
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^3.4.1",
+    "@types/node": "^20",
+    "@types/react": "^19",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8.56.0",
     "eslint-config-next": "15.3.2",
@@ -52,7 +53,6 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5"
+    "prettier": "^3.5.3"
   }
 }
