--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-path": "^3.1.1",
     "@types/react-dom": "^19",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.3.2",
